syntax = "proto3";

package NAlice;

option go_package = "a.yandex-team.ru/alice/nlu/libs/binary_classifier/proto;alice_nlu";
option java_package = "ru.yandex.alice.nlu.libs.binary_classifier.proto";

message TBinaryClassifierModelDescription {
    message TSentence {
        uint32 VectorSize = 1 [json_name = "vector_size"];
        string Embedding = 2 [json_name = "embedding"];
        repeated string Features = 3 [json_name = "features"];
    }

    message TInputDescription {
        TSentence Sentence = 1 [json_name = "sentence"];
    }

    string InputNode = 1 [json_name = "input_node"];
    string OutputNode = 2 [json_name = "output_node"];

    // For compatibility
    uint32 InputVectorSize = 3 [json_name = "input_vector_size"];

    TInputDescription InputDescription = 4 [json_name = "input_description"];
}
